# alpha-nonzero

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  annotate.py  constants.py  create_batches.py  inference.py  lichess_puzzles.csv  main.py  merge_annotations.py  merge_fen_batches.py  model.py  puzzle.py  pyproject.toml  requirements.txt  setup.py  train.py  utils.py
alpha_nonzero.egg-info/: PKG-INFO  SOURCES.txt
anz/: annotation.py  constants.py  data_loader.py  helpers.py  inference.py  mcts.py  png_parser.py  policy_index.py  puzzle.py  train.py  training.py  types.py
playui/: package-lock.json  package.json  server.py
python-stockfish/: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
scripts/: annotate.py  check_pickle_size.py  create_fen_batch.py  go.py  merge_annotations.py  parse_pgn.py  puzzle_evaluate.py  puzzle_evaluate_training_trajectory.py  test_resnet.py  test_transformer.py  train.py
training/: annotate.py  annotate_batches.sh  inference.py  main.py  model.py  (+5 more)
training/stockfish-package/: CMakeLists.txt  Makefile  main.py  pyproject.toml  setup.py
training/stockfish-package/native_stockfish/: __init__.py  stockfish.py  test_functionality.py
training/stockfish-package/native_stockfish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
training/stockfish-package/native_stockfish/_C/: CMakeLists.txt  bindings.cpp  sfwrapper.cpp  sfwrapper.h
training/stockfish-package/native_stockfish/_C/src/: engine.h  ucioption.cpp  ucioption.h
training/stockfish-package/native_stockfish/_C/src/nnue/: network.cpp
(+25 files in other folders)
