cmake_minimum_required(VERSION 3.16)
project(anz_C LANGUAGES CXX)
#project(anz_C LANGUAGES CXX CUDA)

#find_package(pybind11 REQUIRED)
#find_package(CUDA REQUIRED)

#set(CMAKE_CUDA_ARCHITECTURES "75")
#set(CMAKE_CXX_FLAGS "-O3")
#set(CMAKE_CUDA_FLAGS "-O3")

#if(${CUDA_ERROR_CHECK} MATCHES "True")
#add_compile_definitions(__CUDA_ERROR_CHECK__)
#endif()
#if(${CUDNN_ERROR_CHECK} MATCHES "True")
#add_compile_definitions(__CUDNN_ERROR_CHECK__)
#endif()

#add_subdirectory("anz/_C")
